# fatapi_template

./: .gitignore  README.md
myapp/: README.md  pyproject.toml
myapp/myapp/: main.py
