[tool.poetry]
name = "myapp"
version = "0.1.0"
description = "Template for my FastAPI backend projects"
authors = ["Tejas <tejas.pancholi@deepshieldai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
pydantic = "^2.9.1"
loguru = "^0.7.2"
orjson = "^3.10.7"
polars = "^1.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
mypy = "^1.11.2"
ruff = "^0.6.4"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
